fix spacing in Why the UK

--- a/src/scss/atoms/_fonts.scss
+++ b/src/scss/atoms/_fonts.scss
@@ -13,5 +13,6 @@ p {
     font-size: 13px;
     line-height: 1.1em;
     margin-top: -1.5em;
+    margin-bottom: 2.5em;
   }
 }
