--- a/src/scss/molecules/_content-section.scss
+++ b/src/scss/molecules/_content-section.scss
@@ -23,7 +23,7 @@
   }
 
   h3 {
-    margin: flip-side-values(20px 0 24px 0);
+    margin: flip-side-values(0.18em 0 1.36em 0);
   }
 
   //Add external link icon
